# piper

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.c  piper.service  piper.spec
inc/: alsa_control.h
src/: alsa_control.c  main.c
tools/: create_release.sh
